# opengl_project_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
